# forgemmr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  THIRD_PARTY_NOTICES.md  bernstein.yaml  deny.toml  forge-control-center.cmd  forge.cmd  package-lock.json  package.json
.forge/: profile.md
.sdd/: config.yaml
docker/: compose.tls.caddy.yml  compose.tls.cloudflared.yml
docs/: AGENT-PIPELINE.md  BERNSTEIN-EXPLICADO.md  BERNSTEIN-PILOT.md  FORGE-NEXUS.md  FORGE-OPERATOR.md  GUIA-VISUAL.html  GUIA-VISUAL.md  HANDOFF-ETAPA-1-DISCOVERY-STUDIO.md  HANDOFF-MAESTRO-NEXT.md  HANDOFF-SESSAO.md  HANDOFF-fix-onboarding-git-concurrency.md  MAESTRO.md  PLAYBOOK.md  TUI-WEB-PARITY.md  TUTORIAL-VISUAL-DISCOVERY-FIRST.html  TUTORIAL-VISUAL-DISCOVERY-FIRST.md  auto-improvement-loop.md  companion-crates.md  content-hooks-anime-quiz.md  content-hooks-waifu-chat.md  design-decisions.md  issues-mempalace.md  p4-measure-loop.md  research-karpathy-llm-wiki.md  scorecard-anime-quiz.md  scorecard-doki-call.md  scorecard-o-anima-deck.md  scorecard-revisor-cetico-de.md  system-design-git-control.md  telemetry-sink-decision.md  v0.3-roadmap.md  wiki-migrations.md
evals/: Cargo.toml
evals/fixtures/: 01-rust-bug-fix.json  02-architecture-decision.json  05-multi-topic-session.json
maestro/: .gitignore  adapters.mjs  blueprint-loader.mjs  control-center.css  control-center.js  decisions.mjs  deploy.mjs  e2e-result.md  engine.mjs  executor-run-service.mjs  fake-exec.mjs  forge.mjs  improver.mjs  index.html  operator.mjs  p4-result.mjs  roster.json  (+7 more)
(+495 files in other folders)
